apps/base/homarr/homarr-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: homarr
  labels:
    app.kubernetes.io/name: homarr
    app.kubernetes.io/instance: homarr
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: homarr
      app.kubernetes.io/instance: homarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homarr
        app.kubernetes.io/instance: homarr
        app.kubernetes.io/version: "v1.76.2"
    spec:
      # securityContext:
      #   fsGroup: 1000
      #   runAsUser: 1000
      #   runAsGroup: 1000
      #   fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: homarr
          image: "ghcr.io/homarr-labs/homarr:v2.4.1"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7575
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health/live
              port: 7575
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/health/ready
              port: 7575
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - SETUID
                - SETGID
                - DAC_OVERRIDE
            #allowPriviledgeEscalation: false
            #readOnlyRootFilesystem: true
            #runAsNonRoot: true
          volumeMounts:
            - name: homarr-db-new
              mountPath: /appdata
      volumes:
       - name: homarr-db-new
         persistentVolumeClaim:
           claimName: homarr-pvc
