apps/base/homarr/bit-coin.yaml
apiVersion: v1
kind: Service
metadata:
  name: btc-api-svc
  namespace: homarr
spec:
  type: ClusterIP
  selector:
    app: bitcoin
  ports:
    - name: external
      port: 8082
      targetPort: 8080
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitcoin-api
  namespace: homarr
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: bitcoin
  template:
    metadata:
      labels:
        app: bitcoin
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        
        - name: bitcoin-api
          image: ghcr.io/xfilipwozniakx/bitcoin_api:v0.1.60
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: shared-directory
            mountPath: /api/www
        
        - name: nginx
          image: nginx:alpine
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: main-config
            mountPath: /etc/nginx/nginx.conf
            readOnly: true
          - name: shared-directory
            mountPath: /usr/share/nginx/html 
          ports: 
            - containerPort: 8080
      volumes:
      - name: main-config
        hostPath:
          path: /data/kubernetes-pv/nginx/nginx.conf 
          type: File
      - name: shared-directory
        emptyDir: {}
