apps/base/homarr/homarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  labels:
    app: homarr
spec:
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  ports:
    - name: app
      port: 8080
      protocol: TCP
      targetPort: 7575
  selector:
    app.kubernetes.io/name: homarr
    app.kubernetes.io/instance: homarr
