apps/base/homarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: homarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: traefik
  rules: 
    - host: homarr.filipwozniak.org 
      http:
        paths: 
          - backend: 
              service:
                name: homarr
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - homarr.filipwozniak.org
        secretName: certificates-http
